# bluetooth-clocks

./: .coveragerc  .isort.cfg  .pre-commit-config.yaml  .readthedocs.yml  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE.txt  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml
docs/: conf.py  devices.rst  index.rst  requirements.txt  usage.rst
src/bluetooth_clocks/: __init__.py  __main__.py  exceptions.py  scanners.py  skeleton.py
src/bluetooth_clocks/devices/: __init__.py  current_time_service.py  pvvx.py  qingping.py  thermopro.py  xiaomi.py
tests/: conftest.py  test_bluetooth_clock.py  test_current_time_service.py  test_pvvx.py  test_qingping.py  test_skeleton.py  test_thermopro.py  test_xiaomi.py
