[build-system]
# AVOID CHANGING REQUIRES: IT WILL BE UPDATED BY PYSCAFFOLD!
requires = ["setuptools>=46.1.0", "setuptools_scm[toml]>=5"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
# For smarter version schemes and other configuration options,
# check out https://github.com/pypa/setuptools_scm
version_scheme = "no-guess-dev"

[tool.ruff]
select = ["ALL"]
ignore = [
  "ANN101",  # flake8-annotations
  "ANN102",
  "ARG001",  # flake8-unused-arguments
  "ARG002",
  "ARG003",
  "DTZ001",  # flake8-datetimez
  "DTZ006",
  "FBT",     # flake8-boolean-trap
  "T20",     # flake8-print
]
# Always generate Python 3.8-compatible code
target-version = "py38"

src = ["src", "test"]

[tool.ruff.per-file-ignores]
"tests/*" = [
  "INP001",  # implicit namespace
  "S101",    # assert
]

[tool.ruff.pydocstyle]
convention = "google"
